Compile fixes that I think are valid