@@ -239,14 +239,38 @@ object SparkVersionSpec {
     jacksonVersion = "2.18.2"
   )
 
+  private val spark41Snapshot = SparkVersionSpec(
+    fullVersion = "4.1.0-SNAPSHOT",
+    targetJvm = "17",
+    additionalSourceDir = Some("scala-spark-master"),
+    antlr4Version = "4.13.1",
+    additionalJavaOptions = Seq(
+      // Copied from SparkBuild.scala to support Java 17 for unit tests (see apache/spark#34153)
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
+    ),
+    jacksonVersion = "2.18.2"
+  )
+
+  // TODO 4.2.0-SNAPSHOT (actual master)
+
   /** Default Spark version */
   val DEFAULT = spark35
 
   /** Spark master branch version (optional). Release branches should not build against master */
-  val MASTER: Option[SparkVersionSpec] = Some(spark40Snapshot)
+  val MASTER: Option[SparkVersionSpec] = Some(spark41Snapshot)
 
   /** All supported Spark versions - internal use only */
-  val ALL_SPECS = Seq(spark35, spark40Snapshot)
+  val ALL_SPECS = Seq(spark35, spark40Snapshot, spark41Snapshot)
 }
 
 /** See docs on top of this file */
